--- a/package.json
+++ b/package.json
@@ -28,23 +28,24 @@
     "ethjs-query": "^0.3.8"
   },
   "devDependencies": {
-    "@metamask/eslint-config": "^7.0.1",
-    "@metamask/eslint-config-mocha": "^7.0.0",
-    "@metamask/eslint-config-nodejs": "^7.0.1",
-    "@metamask/eslint-config-typescript": "^7.0.0",
+    "@metamask/eslint-config": "^10.0.0",
+    "@metamask/eslint-config-mocha": "^10.0.0",
+    "@metamask/eslint-config-nodejs": "^10.0.0",
+    "@metamask/eslint-config-typescript": "^10.0.0",
     "@types/node": "^14.14.7",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-mocha": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.2.9",
+    "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eth-block-tracker": "^4.4.3",
     "ethereumjs-util": "^6.1.0",
-    "mocha": "^8.2.1",
-    "prettier": "^2.2.1",
+    "mocha": "^9.2.2",
+    "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.2.11",
     "typescript": "^4.0.7",
     "xtend": "^4.0.1"
